udpated npm description to indicate that the package is not completed, generated changelog and added an entry for first minor version bump

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-browserstore",
-  "description": "A very thin VueJS wrapper around local & session browser storage",
+  "description": "(ß -- not finished) A very thin VueJS wrapper around local & session browser storage",
   "version": "0.1.1",
   "author": {
     "name": "David Johnson",
