--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-browserstore",
-  "description": "(ß -- not finished) A very thin VueJS wrapper around local & session browser storage",
-  "version": "0.1.1",
+  "description": "A very thin VueJS wrapper around local & session browser storage",
+  "version": "0.1.2",
   "author": {
     "name": "David Johnson",
     "email": "davidjohnson1297@gmail.com"
